; ModuleID = '/home/carl/AnghaBench/linux/samples/mei/extr_mei-amt-version.c_mei_deinit.c'
source_filename = "/home/carl/AnghaBench/linux/samples/mei/extr_mei-amt-version.c_mei_deinit.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.mei = type { i32, i32, i64, i64 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.mei*)* @mei_deinit to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @mei_deinit(%struct.mei* %0) #0 {
  %2 = alloca %struct.mei*, align 8
  store %struct.mei* %0, %struct.mei** %2, align 8
  %3 = load %struct.mei*, %struct.mei** %2, align 8
  %4 = getelementptr inbounds %struct.mei, %struct.mei* %3, i32 0, i32 0
  %5 = load i32, i32* %4, align 8
  %6 = icmp ne i32 %5, -1
  br i1 %6, label %7, label %12

7:                                                ; preds = %1
  %8 = load %struct.mei*, %struct.mei** %2, align 8
  %9 = getelementptr inbounds %struct.mei, %struct.mei* %8, i32 0, i32 0
  %10 = load i32, i32* %9, align 8
  %11 = call i32 @close(i32 %10)
  br label %12

12:                                               ; preds = %7, %1
  %13 = load %struct.mei*, %struct.mei** %2, align 8
  %14 = getelementptr inbounds %struct.mei, %struct.mei* %13, i32 0, i32 0
  store i32 -1, i32* %14, align 8
  %15 = load %struct.mei*, %struct.mei** %2, align 8
  %16 = getelementptr inbounds %struct.mei, %struct.mei* %15, i32 0, i32 3
  store i64 0, i64* %16, align 8
  %17 = load %struct.mei*, %struct.mei** %2, align 8
  %18 = getelementptr inbounds %struct.mei, %struct.mei* %17, i32 0, i32 2
  store i64 0, i64* %18, align 8
  %19 = load %struct.mei*, %struct.mei** %2, align 8
  %20 = getelementptr inbounds %struct.mei, %struct.mei* %19, i32 0, i32 1
  store i32 0, i32* %20, align 4
  ret void
}

declare dso_local i32 @close(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
